--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
+    "axios": "^1.5.1",
+    "cheerio": "^1.0.0-rc.12",
+    "env": "0.0.2",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
+    "mongoose": "^7.5.3",
     "next": "13.5.3",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.20"
   }
 }
